# mdc-analytics

./: .pre-commit-config.yaml  README.md  analysis.ipynb  apptainer.def  condor.sub  executable.sh  pyproject.toml
.ipynb_checkpoints/: analysis-checkpoint.ipynb
configs/: o4-llpic.yaml
configs/crossmatch/: o3-mdc.yaml  o4-llpic.yaml
configs/crossmatch/.ipynb_checkpoints/: o3-mdc-checkpoint.yaml  o4-llpic-checkpoint.yaml
configs/query_strain/: o3-mdc.yaml  o4-llpic.yaml
data/: Bilby.posterior_samples.hdf5  o4-llpic-injections.hdf5  o4-llpic-segments.txt
mdc_analytics/: gracedb.py
mdc_analytics/crossmatch/: embrights.py  gracedb.py  main.py  pe.py  skymaps.py  utils.py
mdc_analytics/query_strain/: main.py  utils.py
mdc_analytics/tool/: crossmatch.py
