[project]
name = "mdc-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "astropy>=6.0.1",
    "gwpy>=3.0.12",
    "healpy>=1.17.3",
    "igwn-ligolw>=2.1.0",
    "jsonargparse>=4.40.0",
    "jupyter>=1.1.1",
    "ligo-gracedb>=2.14.2",
    "ligo-skymap>=2.2.2",
    "matplotlib>=3.9.4",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "tables>=3.10.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pre-commit>=3.7.0,<4",
    "ruff>=0.9.6",
]

[tool.uv]
default-groups = [
    "dev",
]

[project.scripts]
mdc-crossmatch = "mdc_analytics.crossmatch.main:main"
mdc-query-strain = "mdc_analytics.query_strain.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 79
exclude = ["*.ipynb"]
extend-exclude = ["docs"]

[tool.ruff.lint]
mccabe = {"max-complexity" = 18}
select = ["B", "C", "E", "F", "W",  "B9"]
ignore = ["W605", "E203"]  # ignore for consistency with black

# ignore asterisk imports and unused
# import errors in __init__ files
per-file-ignores =  {"**/__init__.py" = ["F401", "F403"]}


[tool.ruff.lint.isort]
known-first-party = ["mdc_analytics"]
# multi-line-output = 3
# include-trailing-comma = true
